# app/models/user.rb
@@ -5,9 +5,23 @@ class User < ApplicationRecord
   devise :database_authenticatable, :registerable,
          :recoverable, :rememberable, :validatable
   before_save :ensure_login_token
+  def email_required?
+    false
+  end
 
-  validates :email, presence: true, uniqueness: { case_sensitive: false }, on: :create
-  validates :password, presence: true, length: { minimum: 6 }, on: :create
+  def email_changed?
+    false
+  end
+
+  def will_save_change_to_email?
+    false
+  end
+
+  def password_required?
+    false
+  end
+  # validates :email, presence: true, uniqueness: { case_sensitive: false }, on: :create
+  # validates :password, presence: true, length: { minimum: 6 }, on: :create
   validates :mobile_number, uniqueness: true
   def ensure_login_token
     self.login_token ||= Devise.friendly_token
